# OOP_sfSnake

./: CMakeLists.txt  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  GameSettings.h  MenuScreen.cpp  MenuScreen.h  README.md  Report.md  Screen.h  Snake copy.cpp  Snake.cpp  Snake.h  SnakeNode.cpp  SnakeNode.h
